<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="317dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@drawable/situps"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="-4dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:text="@string/situps"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="240dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@drawable/deadlift"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="-4dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:text="@string/deadlift"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="240dp" />
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@drawable/russian"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="-4dp" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:text="@string/russian"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="240dp" />
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@drawable/benchpress"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="-4dp" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:text="@string/benchpress"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="240dp" />
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="236dp"
                app:srcCompat="@drawable/pullups"
                tools:layout_editor_absoluteX="11dp"
                tools:layout_editor_absoluteY="-4dp" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:text="@string/pullups"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="240dp" />

        </LinearLayout>


    </ScrollView>
</RelativeLayout>
